Created template for recipes
Made a template structure for all recipes as well as made the necessary changes to index file to seperate links.

--- a/recipes/fettuccine.html
+++ b/recipes/fettuccine.html
@@ -9,6 +9,14 @@
 
         <h1> Authentic Fettuccine Alfredo </h1>
 
+        <!-- Add picture HERE -->
+
+        <!-- Description -->
+
+        <!-- Unordered list of Ingredients -->
+
+        <!-- Ordered list of steps  -->
+
 
     </body>
 </html>
