--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 <body>
     <h1> Odin Recipes </h1>
 
-    <a href="recipes/fettuccine.html"> Fettuccine Alfredo </a>
-    <a href="recipes/lasagna.html"> Lasagna </a>
-    <a href="recipes/stir-fry.html"> Beef Stir-Fry </a>
+    <ul>
+        <li><a href="recipes/fettuccine.html"> Fettuccine Alfredo </a></li>
+        <li><a href="recipes/lasagna.html"> Lasagna </a></li>
+        <li><a href="recipes/stir-fry.html"> Beef Stir-Fry </a></li>    
+    </ul>
+
     
 </body>
 </html>
