--- a/recipes/fettuccine.html
+++ b/recipes/fettuccine.html
@@ -9,13 +9,42 @@
 
         <h1> Authentic Fettuccine Alfredo </h1>
 
-        <!-- Add picture HERE -->
+            <!-- Add picture HERE -->
+
+            <img src="../images/alfredo.jpg" alt="Picture of tasty fettuccine alfredo"> 
 
         <!-- Description -->
 
+        <h2> Description </h2>
+
+            <p>
+                I created this fettuccine Alfredo by modifying my grand-mother's recipe. 
+                I get nothing but compliments when I make this dish. 
+                My girlfriend addores it, and she scrapes the pan every time. 
+                I must warn you, this recipe is not for the health-conscious!
+            </p>
+
         <!-- Unordered list of Ingredients -->
 
+        <h2> Ingredients </h2>
+
+            <ul>
+                <li> Pasta: Of course, you’ll need fettuccine pasta. </li>
+                <li> Butter: This Alfredo sauce starts with two sticks of butter. </li>
+                <li> Cream: The rich sauce calls for almost a cup of heavy cream. </li>
+                <li> Seasonings: The fettuccine Alfredo is simply seasoned with salt, pepper, and garlic salt. </li>
+                <li> Cheese: You’ll need Romano and Parmesan cheeses. </li>
+            </ul>
+
         <!-- Ordered list of steps  -->
+
+        <h2> Steps </h2>
+
+            <ol>
+                <li> Cook the pasta. </li>
+                <li> Melt the butter and cream together on the stove, season, and stir in the cheese. </li>
+                <li> Toss the pasta in the cheese sauce. </li>
+            </ol>
 
 
     </body>
