--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,13 +11,60 @@
 
         <!-- Add picture HERE -->
 
+        <img src="../images/lasagna.jpg" alt="Picture of delicious lasagna">
+
         <!-- Description -->
+
+        <h2> Description </h2>
+
+            <p>
+                Coming from an Italian background, I always ate homemade lasagna growing up. 
+                It was a staple food in our household that always resulted in second servings and stuffed stomachs. 
+                This italian classic is another rendition from my grand-mother's cookbook. 
+            </p>
 
         <!-- Unordered list of Ingredients -->
 
+        <h2> Ingredients </h2>
+
+            <ul>
+                <li> Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef. </li>
+                <li> Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor. </li>
+                <li> Tomato products: You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste. </li>
+                <li> Sugar: Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce. </li>
+                <li> Spices and seasonings: This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper. </li> 
+                <li> Lasagna noodles: Use store-bought or homemade lasagna noodles. </li>
+                <li> Cheeses: Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent. </li>
+                <li> Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it. </li> 
+            </ul>
+
         <!-- Ordered list of steps  -->
 
-        
+        <h2> Steps </h2>
+
+            <ol> 
+                <li> Make the meat sauce. </li>
+                <li> Cook the noodles. </li>
+                <li> Make the ricotta mixture. </li>
+                <li> Layer the lasagna according to the instructions below. </li>
+                <li> Cover with foil. </li>
+                <li> Bake in the oven for 50 minutes at 375 F removing the foil half-way through the cook time. </li>
+                <li> Let the lasagna rest for 15 minutes before serving. </li>
+            </ol>
+
+        <h2> How to layer: </h2>
+
+            <ol>
+                <li> Meat sauce </li>
+                <li> Noodles </li>
+                <li> Ricotta mixture </li>
+                <li> Mozzarella slices </li> 
+                <li> Meat sauce </li> 
+                <li> Parmesan cheese </li>
+                <li> Repeat the layers, then top with the remaining Parmesan. </li>
+            </ol>
+
+
 
 
     </body>
